...
                return
            }
            
            self.guestBooks.append(guestBook)
            print("registro adicionado...: \(guestBook.toString())")
                
            self.alerta(titulo: "Registro adicionado", mensagem: "Registro adicionado com sucesso!", withView:view)
        }
    }
    
    // precisa de teste
    // obtem um array como resposta
    func loadGuestBooks(withView view:GuestBooksViewController) {
...
